--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ body {
     font-size: 25px;
 }
 
-form {
+.form {
     width: 480px;
     height: 572px;
 
@@ -60,4 +60,29 @@ form {
     background-color: #fff;
     border-radius: 5px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.08);
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+input {
+    border: 0;
+    border-bottom: 2px solid black;
+    font-size: 16px;
+}
+
+label {
+    font-weight: bold;
+    font-size: 12px;
+    line-height: 16px;
+}
+
+button {
+    color: #fff;
+    background-color: #2DC5FA;;
+    border: none;
+    border-radius: 6px;
+    height: 56px;
+    font-size: 20px;
 }
