--- a/style.css
+++ b/style.css
@@ -9,12 +9,14 @@
 
 body {
     font-family: sans-serif;
+    color: #404040;
 }
 
 .container {
     display: flex;
     justify-content: center;
     align-content: center;
+    margin: 6rem 2.5rem;
 }
 
 /*HEADER*/
@@ -38,11 +40,6 @@ body {
     color: #fff;
 }
 
-.head-text-position {
-    position: relative;
-    top: 20%;
-    margin-bottom: 1rem;
-}
 
 .header-content h1 {
     font-size: 53px;
@@ -60,6 +57,7 @@ body {
     background-color: #fff;
     border-radius: 5px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.08);
+    color: #2D354C;
 
     display: flex;
     flex-direction: column;
@@ -85,4 +83,22 @@ button {
     border-radius: 6px;
     height: 56px;
     font-size: 20px;
+}
+
+/*RECTANGLES*/
+.rect-1 {
+    margin: 6.2rem 9.4rem;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.08);
+}
+
+.rect-1-text {
+    padding: 0 3rem;
+    line-height: 150%;
+}
+
+.video-box {
+    background-color:  rgba(45, 197, 250, 0.1);
+    border-radius: 6px;
+    margin: 2.25rem 4.5rem;
+    height: 40vh;
 }
