--- a/style.css
+++ b/style.css
@@ -27,6 +27,26 @@ body {
 .column {
     flex-direction: column;
 }
+
+/*FONTS*/
+.f32 {
+    font-size: 32px;
+}
+.f24 {
+    font-size: 24px;
+}
+.f16 {
+    font-size: 16px;
+}
+.f18{
+    font-size: 18px;
+}
+.italic {
+    font-style: italic;
+}
+.line-h-140 {
+    line-height: 140%;
+}
  
 /*HEADER*/
 .header {
@@ -93,6 +113,10 @@ button {
     border-radius: 4px 0px 0px 4px;
     width: 30vw;
 }
+.intro-title {
+    color:#F49102; 
+    font-size: 30px;
+}
 .rect-box {
     margin: 6.2rem 9.4rem;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.08);
@@ -120,6 +144,20 @@ button {
     color: #2D354C;
     margin-right: 2rem;
     line-height: 150%;
+}
+.padd-3 {
+    padding: 3rem;
+}
+.marg-top-2 {
+    margin-top: 2rem;
+}
+.rect-blue-header {
+    color:#0D8B9F; 
+    font-size: 34px;
+}
+.rect-orange-header {
+    color: #F49102;
+    font-size: 34px;
 }
 
 /*PEOPLE BOXES*/
@@ -164,6 +202,21 @@ button {
     transform: translate(120px, -3rem);
     width: 25vw;
     border-radius: 6px;
+}
+.people-heading {
+    font-size: 35px; 
+    margin-bottom: 2rem;
+}
+/*VALUES*/
+.values-header {
+    margin-left: 4.5rem; 
+    font-size: 35px 
+}
+.values-p {
+    margin-top: 1rem;
+}
+.values-img {
+    border-radius: 4px; height: 25vh;
 }
 
 /*REASONS*/
@@ -210,7 +263,7 @@ button {
     height: 43px;
 }
 
-@media only screen and (max-width: 992px) {
+@media only screen and (max-width: 768px) {
     .tablet-wrap {
         flex-wrap: wrap;
     }
@@ -269,7 +322,7 @@ button {
     }
 }
 
-@media only screen and (max-width: 480px) {
+@media only screen and (max-width: 375px) {
     .mobile-column {
         flex-direction: column;
      }
