--- a/style.css
+++ b/style.css
@@ -15,8 +15,14 @@ People box orange: #FEF4E6*/
     margin: 0;
     padding: 0;
 }
+@font-face {
+    font-family: "Gelion-Regular";
+    src: url("./Gelion/Lluis\ Font/Gelion-Regular.ttf");
+}
+
 body {
-    font-family: sans-serif;
+    /*font-family: sans-serif;*/
+    font-family: Gelion-Regular;
     color: #404040;
 }
 .container {
