--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ People box orange: #FEF4E6*/
 }
 @font-face {
     font-family: "Gelion-Regular";
-    src: url("./Gelion/Lluis\ Font/Gelion-Regular.ttf");
+    src: url("./Gelion/Font/Gelion-Regular.ttf");
 }
 
 body {
